--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,8 @@ header {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: darkgreen;
+  text-decoration: underline;
+  font-weight: 400;
   
 }
 
